# ConsoleGame

./: CMakeLists.txt  DarkMage.h  Enemy.cpp  EnemyFactory.h  ImpFactory.h  MainHeader.h  Protagonist.cpp  Protagonist.h  Pyromancer.h  README.md  main.cpp
Factories/: EnemyFactory.cpp  EnemyFactory.h  FactoriesHeader.h  ImpFactory.cpp  ImpFactory.h
Tests/: main_test.cpp  tests.h
Units/: DarkMage.cpp  Enemy.cpp  Enemy.h  Imp.cpp  Imp.h  Protagonist.h  Pyromancer.cpp  Unit.cpp  Unit.h  UnitsHeader.h
Units/Enemies/: EnemiesHeader.h  Enemy.h
Units/Heroes/: DarkMage.h  HeroesHeader.h  Protagonist.cpp  Protagonist.h  Pyromancer.h
